--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
         <!-- Random Question Button -->
         <button id="random-question">Random Question</button>
 
-        <!-- Problem Container -->
-        <div id="problem-container">
-            <h2>Select a Question</h2>
-            <p>Click "Random Question" to start.</p>
-        </div>
+        <!-- Problem -->
+        <p>Click "Random Question" to start.</p>
 
         <!-- Input -->
         <textarea id="regex-input" placeholder="Enter your regex here"></textarea>
