--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </select>
 
         <!-- Random Question Button -->
-        <button id="random-question">Random Question</button>
+        <button id="random-question">Random Unsolved Question</button>
         
         <!-- Problem -->
-        <div id="info">Click 'Random Question' or choose one from the bank to start</div>
+        <div id="info">Click 'Random Unsolved Question' or choose one from the bank to start</div>
 
         <!-- Input -->
         <div style="display: flex; align-items: center; gap: 5px; margin-top: 15px;">
