--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Input -->
         <div style="display: flex; align-items: center; gap: 5px; margin-top: 15px;">
             <span id="carat" style="font-family: Consolas;">^</span>
-            <textarea id="input" placeholder="Enter your regex here" style="width: 50%;"></textarea>
+            <textarea id="input" placeholder="Enter your regex here..." style="width: 50%;"></textarea>
             <span id="dollar" style="font-family: Consolas;">$</span>
         </div>
 
