--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
                     </tr>
                     <tr>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>a|b</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">a or b</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;"><span style="font-family: Consolas;">a</span> or <span style="font-family: Consolas;">b</span></td>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>$</strong></td>
                         <td style="border: 1px solid #ccc; padding: 8px;">end of string</td>
                     </tr>
                     <tr>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>[abc]</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">match any character in abc</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">match any character in <span style="font-family: Consolas;">abc</span></td>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>(p)</strong></td>
                         <td style="border: 1px solid #ccc; padding: 8px;">capture the pattern <span style="font-family: Consolas;">p</span> and store it somewhere (match group in Python)</td>
                     </tr>
                     <tr>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>[^abc]</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">anything but an ’a’, ’b’, or ’c’</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">anything but an ’<span style="font-family: Consolas;">a</span>’, ’<span style="font-family: Consolas;">b</span>’, or ’<span style="font-family: Consolas;">c</span>’</td>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>\d</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">any digit, same as [0-9]</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">any digit, same as <span style="font-family: Consolas;">[0-9]</span></td>
                     </tr>
                     <tr>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>[a-z]</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">any letter in the ASCII range of a-z</td>
+                        <td style="border: 1px solid #ccc; padding: 8px;">any letter in the ASCII range of <span style="font-family: Consolas;">a-z</span></td>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>\s</strong></td>
                         <td style="border: 1px solid #ccc; padding: 8px;">any space character like <span style="font-family: Consolas;">\n</span>, <span style="font-family: Consolas;">\t</span>, <span style="font-family: Consolas;">\r</span>, <span style="font-family: Consolas;">\f</span>, or space</td>
                     </tr>
