--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>*</strong></td>
                         <td style="border: 1px solid #ccc; padding: 8px;">zero or more repetitions of the preceding character or group</td>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>{n}</strong></td>
-                        <td style="border: 1px solid #ccc; padding: 8px;">exactly \( n \) repetitions of the preceding character or group</td>            </tr>
+                        <td style="border: 1px solid #ccc; padding: 8px;">exactly \( n \) repetitions of the preceding character or group</td>            
+                    </tr>
                     <tr>
                         <td style="border: 1px solid #ccc; padding: 8px; font-family: Consolas;"><strong>+</strong></td>
                         <td style="border: 1px solid #ccc; padding: 8px;">one or more repetitions of the preceding character or group</td>
