--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Counter -->
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <p>Solved: <span id="solved-count">0</span> / <span id="total-problems">0</span></p>
-            <div>Errors: <u>apabla@terpmail.umd.edu</u></div>
+            <div>Errors/Feedback/Questions: <u>apabla@terpmail.umd.edu</u></div>
         </div>
 
         <!-- cheatsheet -->
