--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <button id="run-tests" style="height: 40px; float: left;">Run Tests</button>
             <button id="complete" style="height: 40px;">Mark Problem Complete</button>
             <button id="incomplete" style="height: 40px;">Mark Problem Incomplete</button>
+            <button id="clear-feedback" style="height: 40px;">Clear Feedback</button>
             <button id="sample-answer" style="height: 40px; float: right;">Sample Answer</button>
         </div>
 
