hidden test updates

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Results Section -->
     <div class="results">
         <div id="public-tests"></div>
-        <div id="secret-tests"></div>
+        <div id="hidden-tests"></div>
         <table id="detailed-output">
             <colgroup>
                 <col style="width: 10%;">
