--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <!-- Google Analytics! -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2RF4L7698T"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2HL7C6CHJN"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-2RF4L7698T');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-2HL7C6CHJN');
     </script>
     
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -146,3 +146,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
